--- a/self2.html
+++ b/self2.html
@@ -7,15 +7,132 @@
   <title>Grid</title>
   <style>
     .grid-container{
-      width: 500px; 
+      width: 296px; 
+      display: grid;
       margin: 0 auto;
+      padding: 0px;
     }
     .grid-item{
-      width:100%;
+      width:94px;
+      height: 100px;
       background-color: red;
+      margin: 0 0 10px 10px;
+
     }
     .grid-item:nth-child(2n){
       background-color: #bd4242;
+    }
+    .grid-item:nth-child(1){
+      grid-column: 1/1;
+    }
+    .grid-item:nth-child(2){
+      width:198px;
+      height: 210px;
+      grid-column: 2/4;
+      grid-row: 1/3;
+    }
+    .grid-item:nth-child(3){
+      /* width:194px; */
+      grid-column: 1/2;
+      grid-row: 2/3
+    }
+    .grid-item:nth-child(4){
+      /* width:194px; */
+      grid-column: 1/2;
+      grid-row: 3/4
+    }
+    .grid-item:nth-child(5){
+      /* width:194px; */
+      grid-column: 2/3;
+      grid-row: 3/4
+    }
+    .grid-item:nth-child(6){
+      /* width:194px; */
+      grid-column: 3/4;
+      grid-row: 3/4
+    }
+    .grid-item:nth-child(7){
+      /* width:194px; */
+      grid-column: 1/2;
+      grid-row: 4/5
+    }
+    .grid-item:nth-child(8){
+      /* width:194px; */
+      grid-column: 2/3;
+      grid-row: 4/5
+    }
+    .grid-item:nth-child(9){
+      /* width:194px; */
+      grid-column: 3/4;
+      grid-row: 4/5
+    }
+    .grid-item:nth-child(10){
+      width:302Px;
+      grid-column: 1/4;
+      grid-row: 5/6
+    }
+    @media only screen and (min-width:500px) {
+    .grid-container{
+      width: 500px; 
+      display: grid;
+      margin: 0 auto;
+      padding: 0px;
+    }
+    .grid-item{
+      width:94px;
+      height: 100px;
+      background-color: red;
+      margin: 0 0 10px 10px;
+
+    }
+      .grid-item:nth-child(1){
+      grid-column: 1/1;
+    }
+    .grid-item:nth-child(2){
+      width:198px;
+      height: 210px;
+      grid-column: 2/4;
+      grid-row: 1/3;
+    }
+    .grid-item:nth-child(3){
+      width:198px;
+      grid-column: 4/6;
+      grid-row: 1/2;
+    }
+    .grid-item:nth-child(4){
+      grid-column: 1/1;
+      grid-row: 1/2;
+    }
+    .grid-item:nth-child(5){
+      width:198px;
+      grid-column: 4/6;
+      grid-row: 2/3;
+    }
+    .grid-item:nth-child(6){
+      /* width:194px; */
+      grid-column: 1/2;
+      grid-row: 3/4
+    }
+    .grid-item:nth-child(7){
+      /* width:194px; */
+      grid-column: 2/3;
+      grid-row: 3/4
+    }
+    .grid-item:nth-child(8){
+      /* width:194px; */
+      grid-column: 3/4;
+      grid-row: 3/4
+    }
+    .grid-item:nth-child(9){
+      width:94px;
+      grid-column: 4/5;
+      grid-row: 3/4
+    }
+    .grid-item:nth-child(10){
+      width:94Px;
+      grid-column: 5/6;
+      grid-row: 3/4
+    }
     }
   </style>
 </head>
